# HousingPolicyResearch

./: .env.template  .gitignore  .pre-commit-config.yaml  .raycast.ts  .secrets.baseline  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_FINDINGS_VISUAL.txt  Advocacy-Toolkit.md  Agency-Implementation-Guide.md  CLONE_INVENTORY_AND_DISPOSITION_PLAN.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_STATUS_JAN2026.md  CONTRIBUTING 2.md  CONTRIBUTING.md  Capstone alias  DTwho_owns_what_export.csv  Evictions_in_Brooklyn_20250408.csv  Final-Housing_Subsidy_MasterFormatted_Final.docx  HousingPolicyResearch.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LINK_CHECK_COMPLETION_SUMMARY.md  Metric-Original-REVISED-Status.csv  NYC_Housing_Subsidy_Ops_Tasks_Notion.csv  NYC_Housing_Subsidy_Ops_Tasks_Notion.numbers  OPERATIONAL_RUNBOOK.md  PACKAGE_JSON_SETUP.md  QUICKREF.md  QUICK_REFERENCE.md  RAYCAST_IMPLEMENTATION_REVIEW.md  RAYCAST_QUICK_START.md  RAYCAST_README.md  RAYCAST_SPACE_INTEGRATION_SUMMARY.txt  README copy.md  README.md  REORGANIZATION_ACTION_PLAN.md  REORGANIZATION_COMPLETE.md  REPOSITORY_ORGANIZATION_SUMMARY.md  REVIEW_COMPLETE.txt  SECURITY-CHECKLIST.md  (+30 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
00_admin/: NYC_Housing_Space_Integration.md  NYC_Housing_Subsidy_Space_Updated_Ops.md  Persona_Reference_Cards.md  settings.yaml
60_logs/: NYC_Housing_Subsidy_Policy_News_LIVE_20251226.csv
Capstone/: APA2_Style_Template.docx  APA_Formatted_Housing_Subsidy_Final.docx  APA_Style_Template.docx  APA_Style_Template.dotx  APA_Style_Template_Full.docx  MEMORANDUM.pages  (+26 more)
(+397 files in other folders)
