[project]
name = "housing-policy-research"
version = "0.1.0"
description = "TCAP Housing Subsidy Reform Tools"
authors = [
    { name = "SfosssHousing" }
]
requires-python = ">=3.8"
dependencies = [
    "black==25.12.0",
    "flake8==7.3.0",
    "fonttools==4.60.2",
    "mdformat==1.0.0",
    "openai==2.14.0",
    "pandas==2.3.3",
    "pre-commit==4.5.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "urllib3==2.6.3"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
